// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoMatchesYet renders correctly for buy offer 1`] = `
<View
  style={
    [
      {
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      {
        "color": "#F56522",
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 28,
        "textAlign": "center",
      }
    }
  >
    we'll notify you when there is a match!
  </PeachText>
  <BuyOfferSummary
    offer={
      {
        "amount": [
          50000,
          250000,
        ],
        "creationDate": 2022-03-08T11:41:07.245Z,
        "doubleMatched": false,
        "id": "37",
        "matched": [],
        "matches": [],
        "meansOfPayment": {
          "CHF": [
            "sepa",
          ],
          "EUR": [
            "sepa",
          ],
        },
        "online": true,
        "originalPaymentData": [],
        "paymentData": {
          "sepa": {
            "hash": "TODO add payment hash",
          },
        },
        "publishingDate": 2022-03-08T11:41:07.245Z,
        "releaseAddress": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
        "seenMatches": [],
        "type": "bid",
      }
    }
  />
  <View />
</View>
`;

exports[`NoMatchesYet renders correctly for sell offer 1`] = `
<View
  style={
    [
      {
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      {
        "color": "#F56522",
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 28,
        "textAlign": "center",
      }
    }
  >
    we'll notify you when there is a match!
  </PeachText>
  <SellOfferSummary
    offer={
      {
        "amount": 250000,
        "creationDate": 2022-03-08T11:41:07.245Z,
        "doubleMatched": false,
        "funding": {
          "amounts": [],
          "expiry": 537,
          "status": "NULL",
          "txIds": [],
          "vouts": [],
        },
        "id": "38",
        "matched": [],
        "matches": [],
        "meansOfPayment": {
          "EUR": [
            "sepa",
          ],
        },
        "online": true,
        "originalPaymentData": [],
        "paymentData": {
          "sepa": {
            "hash": "TODO add payment hash",
          },
        },
        "premium": 1.5,
        "publishingDate": 2022-03-08T11:41:07.245Z,
        "refunded": false,
        "released": false,
        "returnAddress": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
        "seenMatches": [],
        "type": "ask",
      }
    }
  />
  <View />
</View>
`;

exports[`NoMatchesYet renders correctly while loading 1`] = `<React.Fragment />`;
